--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -28,6 +28,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-webpack-plugin": "^3.2.0",
         "file-loader": "^6.2.0",
+        "html-loader": "^3.1.2",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
         "style-loader": "^2.0.0",
